Mon Dec  6 22:53:49 2010  Yuki Sonoda (Yugui)  <yugui@yugui.jp>

	* cygwin/GNUMakefile.in ($(RCFILES)): fixes [ruby-core:33525].
	  Patch by Luis Lavena <luislavena AT gmail.com>.
	  http://groups.google.com/group/rubyinstaller/browse_thread/thread/412abfdcb695aecb

Mon Dec  6 22:28:41 2010  Yuki Sonoda (Yugui)  <yugui@yugui.jp>

	* string.c (rb_str_concat): partially reverts r30040 because
	  it unpexpectedly changes the behavior of String#<<.

Fri Nov  5 00:14:15 2010  Aaron Patterson <aaron@tenderlovemaking.com>

	* ext/fiddle/extconf.rb: fixing ffi library location on windows.
	  Thanks Usa! [ruby-core:32930]

Wed Nov  3 14:13:46 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* string.c (rb_enc_cr_str_buf_cat): concatenation of valid
	  encoding string and invalid encoding string should result
	  invalid encoding.  [ruby-core:33027]

Wed Nov  3 07:47:25 2010  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* lib/irb/ruby-lex.rb (RubyLex#identify_string): parse multiple
	  regex options.  a patch from Heesob Park in [ruby-core:32988].

Sat Oct 30 06:32:52 2010  Tanaka Akira  <akr@fsij.org>

	* test/pathname/test_pathname.rb (TestPathname#test_grpowned?): the
	  group of the created file is inherited from the parent
	  directory on BSDs and MacOS X.  Linux also inherit the group if
	  the setgid bit of the directory is set.  It causes the test fail.
	  fixed by Shota Fukumori.  [ruby-dev:42458]

Fri Oct 29 03:04:16 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* string.c (rb_str_dump): fix expected length. [ruby-core:32935]

Thu Oct 21 15:42:01 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* lib/net/telnet.rb (Net::Telnet#close): added.
	  patched by Erik Hollensbe [ruby-dev:42260] #3830

Wed Oct 27 18:27:17 2010  NAKAMURA Usaku  <usa@ruby-lang.org>

	* test/ruby/test_io.rb (TestIO#pipe): should close write end of pipe
	  before closing read end, to get rid of timing problem.

	* test/ruby/test_io_m17n.rb (TestIO_M17N#pipe): ditto.
